--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
 	<section class="">
 		<marquee>Welcome!</marquee>
 	</section>
-	
+
 	<section>
 		<a href="the_moves_to_groove_to.html">
 			<div class="button">
@@ -25,7 +25,7 @@
 	<section>
 		<p>This is your coach:</p>
 		<p>Nick "Boogie-man" Mizesko</p>
-		<img src="img/main_goat.jpg" />
+		<img src="/static/img/main_goat.jpg" />
 		<p>
 			Have you ever wanted to be the star of the show?<br />
 			Do you wish you didn't have two left feet?
@@ -39,7 +39,7 @@
 	</section>
 
 	<footer>
-		
+
 	</footer>
 </body>
 </html>
