--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
 	<section>
 		<p>This is your coach:</p>
 		<p>Nick "Boogie-man" Mizesko</p>
-		<img src="/static/img/main_goat.jpg" />
+		<img src="img/main_goat.jpg" />
 		<p>
 			Have you ever wanted to be the star of the show?<br />
 			Do you wish you didn't have two left feet?
